intergrated content_service with user_service
